# minesweeper

./: CMakeLists.txt  README.md
src/: clock.c  clock.h  common.h  dictionary.c  dictionary.h  game.c  game.h  list.c  list.h  main.c  manager.c  manager.h  ui.c  ui.h  utils.c  utils.h
